# virtualizarr-nc4-toolkit

./: .gitignore  LICENSE  README.md  pyproject.toml
src/virtualizarr_nc4_toolkit/: utils.py  virtualize.py
tests/: test_open_vzarr.ipynb  test_utils.py  test_vzarr.py
