[project]
authors = [{name = "Hannah Zafar", email = "hannah.zafar@nasa.gov"}]
dependencies = []
description = "Toolkit to create virtual stores of .nc4 files"
name = "virtualizarr-nc4-toolkit"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
virtualizarr_nc4_toolkit = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
numpy = ">=2.3.5,<3"
pandas = ">=2.3.3,<3"
obstore = ">=0.8.2,<0.9"
virtualizarr = ">=2.2.1,<3"
kerchunk = ">=0.2.9,<0.3"
pip = ">=25.3,<26"
